# LAview-LaTeX-Struct

./: CMakeLists.txt  INSTALL  README  laview-latex-struct.pc.in  valadoc_env
cmake/: CPackDetectArch.cmake  FindVala.cmake
cpack/: CMakeLists.txt
pkg-config/: CMakeLists.txt  pkg-config.pc.in
po/: CMakeLists.txt  gettext-config.h.in  laview-latex-struct-0.pot  laview-latex-struct.pot
po/ru/: laview-latex-struct-0.po  laview-latex-struct.po
src/: AddSpace.vala  AddSpaces.vala  CMakeLists.txt  Cell.vala  ColParam.vala  ColParams.vala  DocIfaces.vala  Glob.vala  Graphics.vala  GraphicsParser.vala  Longtable.vala  Parser.vala  ParserFactory.vala  Row.vala  Subtable.vala  Table.vala  TableParser.vala  Tabular.vala  TabularParser.vala  Text.vala  gettext-config.h.in  library_constructor.c  main.vala  vala_unsupported.c
src/latex-struct/: AddSpace.vala  AddSpaces.vala  CMakeLists.txt  Cell.vala  ColParam.vala  ColParams.vala  DocIfaces.vala  Glob.vala  GlobParser.vala  Graphics.vala  Longtable.vala  LongtableParser.vala  Parser.vala  ParserFactory.vala  Row.vala  Subtable.vala  Table.vala  TableParser.vala  Tabular.vala  TabularParser.vala  Text.vala  TextParser.vala  main.vala
test/: CMakeLists.txt  LTableTest.vala
test/ltable-test/: CMakeLists.txt  LTableTest.vala
test/parse-test/: CMakeLists.txt  ParseTest.vala
test/split-test/: CMakeLists.txt  SplitTest.vala
test/tex/: CMakeLists.txt  all_subtables.lyx  all_subtables.tex  back_slashes_in_a_table.etalon.tex  back_slashes_in_a_table.tex  formular.lyx  formular_err1.tex  formular_err2.tex  get_tags.sh  graph_in_ltable.tex  includegraphics.tex  limits1.in  limits_table1.etalon.tex  limits_table1.tex  lines.etalon.tex  lines.lyx  lines.tex  ltable_clone_0_0.tex  ltable_clone_0_1.tex  ltable_clone_0_last.tex  ltable_clone_0_lastp1.tex  ltable_clone_1_0.tex  ltable_clone_last_0.tex  ltable_double_embedded.tex  ltable_embedded.tex  ltable_rm0row.tex  ltable_rm1000row.tex  ltable_rm1row.tex  ltable_rm_last_row.tex  ltable_square_arg.lyx  ltable_square_arg.tex  ltable_test.c  multiply_defined_columns.etalon.tex  multiply_defined_columns.tex  old_tex_parser.geany  table_in_table.tex  table_rows.etalon.tex  table_rows.tex  throttle.lyx  throttle.tex  (+11 more)
util/: update-po.sh  valadoc.sh
