CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (LAview C)

SET (LAVIEW_VERSION_MAJOR 0)
SET (LAVIEW_VERSION_MINOR 0)
SET (LAVIEW_VERSION_PATCH 1)
SET (LAVIEW_VERSION
    ${LAVIEW_VERSION_MAJOR}.${LAVIEW_VERSION_MINOR}.${LAVIEW_VERSION_PATCH})

LIST (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

INCLUDE (FindVala)
INCLUDE (UseVala)

ADD_SUBDIRECTORY (src)
