SET (GETTEXT_PACKAGE "${PROJECT_LOWERCASE_NAME_ABI}")
ADD_DEFINITIONS (-DGETTEXT_PACKAGE="${GETTEXT_PACKAGE}")

IF (WIN32)
  SET (LOCALEDIR "")
ELSE ()
  SET (LOCALEDIR "${CMAKE_INSTALL_PREFIX}/share/locale")
ENDIF ()

SET (CUSTOM_LOCALEDIR "" CACHE STRING "Directory to install l10n files into")		

IF (NOT CUSTOM_LOCALEDIR STREQUAL "")
  SET (LOCALEDIR "${CUSTOM_LOCALEDIR}")
  MESSAGE(STATUS "Using LOCALEDIR=${LOCALEDIR}")
ENDIF ()

ADD_DEFINITIONS (-DLOCALEDIR="${LOCALEDIR}")
SET (LOCALE_INSTALL_DIR "share/locale")
LIST (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
INCLUDE (MacroOptionalAddSubdirectory)
FIND_PACKAGE (Gettext REQUIRED)

MACRO_OPTIONAL_ADD_SUBDIRECTORY (langs)

# configure a header file for Gettext
SET (VERSION ${MAJOR}.${MINOR}.${PATCH})
SET (PROJECT_LOWERCASE_NAME_ABI "${PROJECT_LOWERCASE_NAME}-${MAJOR}")

STRING (TOUPPER "${CMAKE_PROJECT_NAME}" GettextUniqueHeader)
SET (GettextPackageNameAbi "${PROJECT_LOWERCASE_NAME_ABI}")
CONFIGURE_FILE (
  "gettext-config.h.in"
  "${PROJECT_BINARY_DIR}/po/gettext-config.h"
  )

IF (NOT GETTEXT_MSGMERGE_EXECUTABLE)
  MESSAGE (FATAL_ERROR "Please install msgmerge binary")
ENDIF (NOT GETTEXT_MSGMERGE_EXECUTABLE)
IF (NOT GETTEXT_MSGFMT_EXECUTABLE)
  MESSAGE(FATAL_ERROR "Please install msgmerge binary")
ENDIF (NOT GETTEXT_MSGFMT_EXECUTABLE)
