FIND_PACKAGE (PkgConfig REQUIRED)

PKG_CHECK_MODULES (GLIB REQUIRED glib-2.0)
INCLUDE_DIRECTORIES (${GLIB_INCLUDE_DIRS})
LINK_DIRECTORIES (${GLIB_LIBRARY_DIRS})

FILE (GLOB_RECURSE LAviewSources RELATIVE ${CMAKE_SOURCE_DIR}/src *.vala)
VALA_PRECOMPILE (VALA_C ${LAviewSources}
                 PACKAGES
                 OPTIONS --thread
                 CUSTOM_VAPIS
                 GENERATE_VAPI laview
                 GENERATE_HEADER laview
                )
ADD_LIBRARY (laview SHARED ${VALA_C})
TARGET_LINK_LIBRARIES (laview ${GLIB2_LIBRARIES})
SET_TARGET_PROPERTIES (laview PROPERTIES VERSION ${LAVIEW_VERSION})
SET_TARGET_PROPERTIES (laview PROPERTIES SOVERSION ${LAVIEW_VERSION_MAJOR})
